# lpil

./: .chezmoiignore  .ctags  .dockerignore  .env  .ftppass.example  .ghci  .gitattributes  .gitconfig  .gitignore  .gitmodules  .jscsrc  .jshintrc  .rubocop.yml  .travis.yml  .vimperatorrc  .vimrc  404.html  Cargo.toml  Dockerfile  Gemfile  Gruntfile.js  Guardfile  LICENCE  Makefile  README.md  README.mkdn  README_start.md  Rakefile  TDDExercises.idr  TODO  _config.yml  _dev_config.yml  a.js  about.html  about.md  app.rb  axa_report_from_xml.rb  beam.md  bower.json  brunch-config.js  (+71 more)
.circleci/: config.yml
.lein/: profiles.clj
.openshift/: README.md
28-hour-clock/: README.md  package.json
CSS/: Site.css  helpPage.css
Databases/: README.md
Files/: README.md  check_if_ftp_has_file.rb
Inserts/: Category_Contact us_Top.html  Category_The Investor_Top.html  Page_Start_Right.ascx  SiteHeader.html
Numbers/: change.rb
Security/: README.md
Strings/: Inventory.resx  Strings.resx
Text/: count_vowels.rb  palindrome.rb  reverse_a_string.rb  words.txt
Threading/: README.md
Web/: README.md
_data/: arts.yml  books.yml  enjoyed-games.yml  group-sites.yml  ideas.yml  keywords.yml  languages.yml  our-people.yml  portfolio.yml  projects.yml  talks.yml  talks_given.yml
_drafts/: 2016-06-05-lexing-and-parsing-with-leex-and-yecc.markdown  2020-08-27-gleam-v0.11-released.md  how-to-make-a-programming-language.md
_includes/: center-tag-list.html  footer.html  head.html  header-nav-mobile.html  header-nav.html  header.html  ie_fixes.html  nav-footer.html  nav-header.html  nav-mobile.html  tracking.html
_layouts/: default.html  home.html  page.html  post.html
_posts/: 2014-08-03-welcome-to-jekyll.markdown  2014-08-05-I-made-a-site.html.markdown  2014-08-05-I-made-a-site.markdown  2014-08-05-i-made-a-site.markdown  2014-08-10-drying-up-minitest-tests-with-metaprogramming.markdown  2014-08-12-welcome-to-jekyll.markdown  2014-08-18-drying-up-minitest-tests-with-metaprogramming.markdown  2014-08-18-drying-up-minitest-tests-with-metaprogramming.md  2014-08-25-i3wm-opening-applications-in-the-scratchpad.markdown  2014-09-28-using-supercollider-with-vim-on-linux.md  2014-10-30-parsing-urls-with-javascript.markdown  2014-10-30-parsing-urls-with-javascript.md  2015-01-09-automatically-running-rust-unit-tests.markdown  2015-01-09-automatically-running-rust-unit-tests.md  2015-05-07-testing-css-computed-styles-with-capybara.markdown  2015-08-31-using-sass-es6-javascript-and-node-modules-with-brunch.markdown  2016-02-17-integrating-webpack-with-phoenix.markdown  2016-05-26-sending-email-via-smtp-with-elixir-phoenix.markdown  2016-10-16-nesting-is-a-css-anti-pattern.markdown  2017-02-11-how-to-make-a-programming-language.md  2019-04-15-hello-gleam.md  2019-08-07-gleam-v0.3-released.md  2019-09-19-gleam-v0.4-released.md  2019-12-16-gleam-v0.5-released.md  2019-12-25-gleam-v0.6-released.md  2020-03-01-gleam-v0.7-released.md  2020-05-06-gleam-v0.8-released.md  2020-05-07-gleam-v0.8-released.md  2020-06-01-gleam-v0.9-released.md  2020-07-01-gleam-v0.10-released.md  2020-08-28-gleam-v0.11-released.md
_sass/: _main.scss
_scss/: .scss-lint.yml
a_modern_approach/: 020_scanf.c  022_dweight.c  makefile
about/: 0_history.html  1_innovation-and-ethos.html  1_services.html  2_our-people.html  2_people.html  2_policies-and-the-environment.html  3_estimates.html  4_policies-and-the-environment.html
algodub/: .gitignore  README.md
alpaca/: README.md
app/: db.js  device.js  midi_message.js  routes.js  server.js  voice.js
archive/happylabs/happylabs-cli/: Cargo.toml
arrayfield-test/: webpack.config.js
assets/: .merlin  bsconfig.json  main.js  package.json  webpack.config.js
aws-lambda-http/: serverless.yml
aws-lambda-http-shim/: Makefile
baraxx/: Dockerfile  README.md  mix.exs
beautiful-concurrency/: beautiful-concurrency.cabal
block-party/: webpack.config.js
blondie-serverless-experiment/: Makefile  README.md  bsconfig.json  webpack.config.js
brent-yorgeys-cis194/: 01-hw.hs  README.md
bricky/: README.md  package.yaml
bs-safe-graphql/: Makefile  package-lock.json
buttons/: App.elm
c/: README.md
cis194/: 01-hw.hs  01-intro.lhs
clojure/: .gitignore
codeabbey/: .001_sum_in_loop.rb.swp  001_sum_a_b.clj  001_sum_in_loop.rb  002_sum_in_loop.clj  004-min-of-three.js  004_min_of_three.rb  005-max-of-arr.js  006-rounding-no-vars.js  006_rounding.rb  007-far-to-cel.js  008-vowel-count.js  011_dice_rolling.rb  014-average-of-array.js  020_collatz_sequence.rb  023_greatest_common_denom.rb  025_joe_problem.rb  027_prime_generation.rb  031_arithmetic_prog.rb  036_reverse_a_string.rb  037_rotate_string.rb  038_savings_calc.rb  data_001_sum_ab.txt
communications-management/: 0_manage.html  2_design.html
config/: application.rb  appsignal.exs  config.exs  config.js  database.yml  dev.exs  ftp.yml.example  neo4j.exs  orientdb.exs  phoenix.exs  prod.exs  prod.secret.exs  routes.rb  schedule.rb  swoosh.exs  test.exs  ueberauth.exs
connect-n/: bower.json
counter-pair/: App.elm  Counter.elm
crates/: jungle-core.md
csound-expression/: 01-intro.hs  02-basic-types.hs  tut-01-intro.lhs  tut-02-basictypes-2-constants.lhs
css/: main.scss
curses/: 01_io.rb  02_move.rb
cv/: Makefile  louis-pilfold-cv.tex
data/: books.yml  enjoyed-games.yml  languages.yml  papers.yml  projects.yml  talks.yml  talks_given.yml
db/: schema.rb
doc/: intro.md
docs/: CNAME  Makefile  _config.yml  gaeilge.html  index.html  main.scss  notes.md
dotfiles/: .aliases.sh  .gitignore  README.md  vscode.jsonc
edx-fp101x/: 03-hw-0.hs  03-hw-1.hs  03-hw-2.hs  (+9 more)
home/boxwatch/: Cargo.toml
home/boxwatch/src/: alert.rs  check_memory_usage.rs  main.rs  system.rs
learning/rust/gotham-hello/: Cargo.toml  README.md
learning/rust/salsa_test/: Cargo.toml
learning/rust/salsa_test/src/: main.rs
learning/rust/scratch/piston_getting_started/: Cargo.toml
scratchpad/haskell/thinking-functionally/: thinking-functionally.cabal
scratchpad/haskell/thinking-functionally/test/: Chapter01Spec.hs
(+3044 files in other folders)
