[package]
name = "happylabs-graphql"
version = "0.1.0"
authors = ["Louis Pilfold <louis@lpil.uk>"]
edition = "2018"

[dependencies]
juniper = "0.12"
juniper_warp = "0.3"
log = "0.4"
pretty_env_logger = "0.3"
warp = "0.1.15"
askama = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "0.5"

