name:                xcss
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lpil/xcss#readme
-- license:             BSD3
-- license-file:        LICENSE
author:              Louis Pilfold
maintainer:          louis@lpil.uk
copyright:           2017 Louis Pilfold
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Xcss.Parser
                     , Data.String.Strip
  build-depends:       base >= 4.7 && < 5
                     , text
                     , megaparsec
  default-language:    Haskell2010

executable xcss
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , xcss
  default-language:    Haskell2010

test-suite xcss-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Data.String.StripSpec
                     , Xcss.ParserSpec
  build-depends:       base
                     , xcss
                     , hspec
                     , QuickCheck
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lpil/xcss
