[package]
name = "boxwatch"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
form_urlencoded = "1.2.1"
gumdrop = "0.8.1"
gumdrop_derive = "0.8.1"
minreq = { version = "2.12.0", features = ["https"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
sysinfo = "0.32.0"
