[package]
name = "salsa_test"
version = "0.1.0"
authors = ["Louis Pilfold <louis@lpil.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salsa = { version = "0.14.1", git = "https://github.com/salsa-rs/salsa", rev = "2c44b6e" }
