name:                thinking-functionally
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/lpil/thinking-functionally#readme
license:             BSD3
license-file:        README.md
author:              Louis Pilfold
maintainer:          louis@lpil.uk
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Chapter01
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable thinking-functionally-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , thinking-functionally
  default-language:    Haskell2010

test-suite thinking-functionally-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , thinking-functionally
                     , QuickCheck
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lpil/thinking-functionally
